tests/invalid/import_in_parent.err_exp
import_in_parent.m:027: In clause for predicate `foo'/1:
import_in_parent.m:027:   error: undefined predicate `bool.foo'/1.
